--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <div class="portfolio-box">
                 <img src="https://via.placeholder.com/290" alt="Website 1">
                 <h3>Demo Website 1</h3>
-                <a href="https://ommaheshpatil1.github.io/Solar-System-and-Beyond-D1/">View Project</a>
+                <button onclick="window.location.href='https://ommaheshpatil1.github.io/Solar-System-and-Beyond-D1/';">
+                </button>
             </div>
             <div class="portfolio-box">
                 <img src="https://via.placeholder.com/290" alt="Website 2">
