--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <img src="https://via.placeholder.com/290" alt="Website 1">
                 <h3>Demo Website 1</h3>
                 <button onclick="window.location.href='https://ommaheshpatil1.github.io/Solar-System-and-Beyond-D1/';">
+                    View Project
                 </button>
             </div>
             <div class="portfolio-box">
