--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <div class="portfolio-box">
                 <img src="https://via.placeholder.com/290" alt="Website 2">
                 <h3>Demo Website 2</h3>
-                <a href="#">View Project</a>
+                <button onclick="window.location.href='https://ommaheshpatil1.github.io/Solar-System-and-Beyond-D1/';">
+                    View Project
+                </button>
             </div>
         </div>
     </section>
