--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>My Work</h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="https://via.placeholder.com/290" alt="Website 1">
+                <img src="Screenshot_20250225-230748_Chrome.jpg" alt="Website 1">
                 <h3>Demo Website 1</h3>
                 <button onclick="window.location.href='https://ommaheshpatil1.github.io/Solar-System-and-Beyond-D1/';">
                     View Project
